--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link href="https://fonts.googleapis.com/css?family=Fjalla+One|Poppins&display=swap" rel="stylesheet">
+    	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+      	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta charset="UTF-8">
 		<title>Tesla Inventory</title>
 	</head>
 	<body>
+		<div class="container">
+			<div>
+				<h1>Tesla Inventory</h1>
+				<p>RESTful API with ability to make get, post, update, and delete requests on Tesla "Inventory".</p>
+			</div>
+			<div>
+				<h2>Routes</h2>
+				
+			</div>
+			
+		</div>
 	
 	</body>
 </html>
